@@ -66,8 +66,8 @@ set (VERSION_SUFFIX "svn")
 set (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_SUFFIX})
 
 message (STATUS "${PROGRAM_NAME} ${VERSION} 
-    prefix: ${CMAKE_INSTALL_PREFIX} 
-    driver: ${RTMIDI_DRIVER}")
+    install prefix: ${CMAKE_INSTALL_PREFIX} 
+    RtMIDI driver: ${RTMIDI_DRIVER}")
 
 # User options
 message (STATUS "Build configuration: ${CMAKE_BUILD_TYPE}")
@@ -93,7 +93,7 @@ link_directories (${QT_LIBRARY_DIR})
 link_libraries (${QT_LIBRARIES})
 add_definitions (-DQT_STRICT_ITERATORS)
 
-if (${CMAKE_SYSTEM} MATCHES "Linux")
+if (UNIX AND NOT APPLE)
 # Check for PKG-CONFIG
     find_package (PkgConfig REQUIRED)
     if (PKG_CONFIG_FOUND)
@@ -103,6 +103,8 @@ if (${CMAKE_SYSTEM} MATCHES "Linux")
     endif ()
 # Check for libX11    
     find_package (X11 REQUIRED)
+    include_directories (${X11_X11_INCLUDE_PATH})
+    link_libraries (${X11_X11_LIB})
 endif ()
 
 if (RTMIDI_DRIVER STREQUAL "JACK")
@@ -116,9 +118,9 @@ if (RTMIDI_DRIVER STREQUAL "JACK")
         list (APPEND JACK_LIB_DIR ${JACK_LIBRARY_DIRS} ${JACK_LIBDIR})
         list (APPEND JACK_INC_DIR ${JACK_INCLUDE_DIRS} ${JACK_INCLUDEDIR})
         link_directories (${JACK_LIB_DIR})
-        include_directories (${JACK_INC_DIR} ${X11_X11_INCLUDE_PATH})
+        include_directories (${JACK_INC_DIR})
         add_definitions (-D__LINUX_JACK__)
-        link_libraries (${JACK_LIBS} ${X11_X11_LIB})
+        link_libraries (${JACK_LIBS})
     else ()
         message (FATAL_ERROR "Please install Jack development libs and headers.")
     endif ()
@@ -136,10 +138,10 @@ if (RTMIDI_DRIVER STREQUAL "ALSA")
         list (APPEND ALSA_LIB_DIR ${ALSA_LIBRARY_DIRS} ${ALSA_LIBDIR})
         list (APPEND ALSA_INC_DIR ${ALSA_INCLUDE_DIRS} ${ALSA_INCLUDEDIR})
         link_directories (${ALSA_LIB_DIR})
-        include_directories (${ALSA_INC_DIR} ${X11_X11_INCLUDE_PATH})
+        include_directories (${ALSA_INC_DIR})
         add_definitions (-D__LINUX_ALSASEQ__)
         add_definitions (-DAVOID_TIMESTAMPING)
-        link_libraries (${ALSA_LIBS} ${X11_X11_LIB} ${CMAKE_THREAD_LIBS_INIT})
+        link_libraries (${ALSA_LIBS} ${CMAKE_THREAD_LIBS_INIT})
     else ()
         message(FATAL_ERROR "Please install ALSA development libs and headers.")
     endif ()
@@ -151,9 +153,9 @@ if (RTMIDI_DRIVER STREQUAL "COREMIDI")
 endif ()
 
 if (RTMIDI_DRIVER STREQUAL "IRIX")        
+    find_package (Threads REQUIRED)
     add_definitions (-D__IRIX_MD__)
-    link_libraries (audio)
-    link_libraries (pthread)
+    link_libraries (audio ${CMAKE_THREAD_LIBS_INIT})
 endif ()
 
 if (RTMIDI_DRIVER STREQUAL "WINMM")        
@@ -162,6 +164,12 @@ if (RTMIDI_DRIVER STREQUAL "WINMM")
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mwindows")
     link_libraries (winmm)
 endif ()
+
+if (RTMIDI_DRIVER STREQUAL "NET")
+    find_package (Threads REQUIRED)
+    add_definitions (-DNETWORK_MIDI)
+    link_libraries (${CMAKE_THREAD_LIBS_INIT})
+endif()
 
 add_subdirectory (src)
 add_subdirectory (translations)
